# lyns-voice

./: .gitattributes  .gitignore  AVATAR_SPEC.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vite.lib.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
demo/: avatar.css  demo.ts  env.d.ts  index.html
docs/: spikes.md
e2e/: avatar.smoke.spec.ts  claude-bridge.spec.ts  fui.smoke.spec.ts  settings.spec.ts  speak-check.spec.ts  terminal.spec.ts  tts-flow.spec.ts
e2e/helpers/: tauri-mock.ts
public/: pcm-worklet.js
scripts/: build-assets.mjs  gen-favicon.mjs  inject.mjs  injector-core.mjs  server-patch-core.mjs  vendor-three.mjs
src/: bundle.ts  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ci.rs  claude.rs  history.rs  kokoro.rs  lib.rs  mem.rs  stt.rs  terminal.rs  transcript.rs  tts.rs
src/app/: main.ts  mini-mode.ts  onboarding.ts  proposeCard.ts  settings.ts  shell.css  shortcuts.ts
src/app/diff/: DiffPanel.ts  diff.css
src/app/session/: SessionManager.ts  SessionPanel.ts  session.css
src/app/terminal/: TerminalInstance.ts  TerminalManager.ts  TerminalPanel.ts  dragResize.ts  terminal.css
src/audio/: MediaTts.ts  MicAnalyser.ts  SpeechReactor.ts  SttCapture.ts  bands.ts
src/avatar/: Avatar.ts  AvatarController.ts  JarvisOrbAvatar.ts  OrbAvatar.ts  QOrbAvatar.ts  deformation.ts  gltf.ts  gpu.ts  noise.ts  reactor.ts  shaders.ts
src/avatar/jarvisOrb/: LICENSE  renderer.ts  states.ts
src/config/: config.ts  store.ts
src/integration/: conductorProtocol.ts  conductorVoice.ts  dom.ts  fleetMeter.ts  replyStreamer.ts  signals.ts  takeover.ts  tauriAdapter.ts  telemetry.ts  transcriptMoodObserver.ts  voiceHooksAdapter.ts  voices.ts  wakeWord.ts
src/mood/: MoodController.ts  colorBlend.ts  moodProtocol.ts  moods.ts
tests/: adapter.attach.test.ts  adapter.test.ts  avatar.test.ts  avatarHead.test.ts  bands.test.ts  conductorProtocol.test.ts  conductorVoice.test.ts  config.test.ts  controller.test.ts  deformation.test.ts  dragResize.test.ts  fleetMeter.test.ts  gltf.test.ts  gpu.test.ts  injector-cli.test.ts  injector.test.ts  libraryPanel.test.ts  mediaTts.test.ts  micAnalyser.test.ts  mood.test.ts  noise.test.ts  orbAvatar.test.ts  proposeCard.test.ts  qOrbAvatar.test.ts  reactor.test.ts  replyStreamer.test.ts  serverPatch.test.ts  sessionManager.test.ts  sessionPanel.test.ts  settings.test.ts  shortcuts.test.ts  signals.test.ts  speechReactor.test.ts  speechReactorTransform.test.ts  sttCapture.test.ts  takeover.test.ts  tauriAdapter.test.ts  telemetry.test.ts  terminalInstance.test.ts  transcriptMoodObserver.test.ts  (+3 more)
tests/fixtures/: voice-hooks-index.html
