[package]
name = "app"
version = "1.0.0"
description = "Q: a Tauri v2 desktop app that is the voice and face of Claude Code."
authors = ["Zamphere"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
# Local speech-to-text (whisper.cpp CPU backend). Builds via CMake + bindgen, so
# it needs LLVM/libclang at build time (LIBCLANG_PATH). CPU-only = no features.
whisper-rs = "0.16"
# Voice-activity detection for utterance endpointing (auto-send on pause). Wraps
# libfvad; builds with the MSVC C compiler (no model, no runtime dep).
webrtc-vad = "0.4"
# First-run model download (checksummed). rustls to avoid native OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"
# Claude Code sidecar: async child process + stream-json over stdin/stdout.
tokio = { version = "1", features = ["process", "io-util", "sync"] }
# Real interactive terminal (Windows ConPTY) for the user-owned escape-hatch shell.
portable-pty = "0.8"
# Neural TTS (Kokoro-82M) run in-process via ONNX Runtime. `download-binaries`
# fetches a prebuilt onnxruntime at build time (no system install). MIT-licensed,
# so Q stays permissively shippable. See src/kokoro.rs.
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
# Grapheme->phoneme for Kokoro. espeak feature OFF (default-features=false) keeps
# it dependency-free and GPL-free; OOV words fall back to letter spelling.
misaki-rs = { version = "0.3", default-features = false }

# Native SAPI text-to-speech (in-process; no powershell.exe child). 0.61.x is the
# version Tauri already resolves, so this adds features to a crate already in the
# tree rather than pulling a second major version.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_Media_Audio",
  "Win32_Media_Speech",
] }

# Optimize dependencies even in dev builds. whisper-rs (the STT inference engine)
# and webrtc-vad are unusably slow compiled unoptimized, which makes the `tauri
# dev` voice loop lag many seconds before a transcript appears. The app crate
# itself stays at opt-level 0 for fast iteration; only the (rarely-recompiled)
# dependencies get O3. Costs one longer rebuild, then dev STT runs near release
# speed. (Use a release `tauri build` for the true latency measure regardless.)
[profile.dev.package."*"]
opt-level = 3
